# rts24-pyspark-schema

./: .gitignore  README.md  pyproject.toml
outputs/: fields_meta.csv  schema_simpleString.txt
src/rts24_pyspark_schema/: __init__.py  cli.py  extract.py
