[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rts24-pyspark-schema"
version = "0.1.0"
description = "Extract RTS 24 Annex (Table 2) fields from the EU PDF and generate a PySpark schema + field metadata."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pdfplumber>=0.11.0",
  "pandas>=2.0.0",
  "pyspark>=3.4.0",
]

[project.scripts]
rts24-extract = "rts24_pyspark_schema.cli:main"

# --- src/ layout package discovery ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Optional: linting
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
